# cs-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
proteus_ui/.streamlit/: config.toml
proteus_ui/services/: imports_service.py  ingest_service.py
proteus_ui/streamlit_app/: Homepage.py
proteus_ui/streamlit_app/pages/: 1_Ingest.py  2_Imports.py  3_Screening.py  4_Extraction.py  5_Matching.py  6_Disposition.py
src/proteus/: __init__.py  cli.py  codebook.py  db.py  export.py  runs.py  schema.sql  vocabulary.py
src/proteus/ingest/: __init__.py  common.py  datashop.py  runestone.py
