[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs-pipeline"
version = "0.1.0"
description = "Automation pipeline that parses student answers to mathematical short-answer questions and extracts reasoning chains."
requires-python = ">=3.11"
dependencies = ["beautifulsoup4"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"proteus" = ["schema.sql", "migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["src/tests", "proteus_ui/tests"]
pythonpath = ["src"]
